--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server ",
-    "build": "webpack "
+    "start": "webpack-dev-server --env.NODE_ENV=dev",
+    "build": "webpack --env.NODE_ENV=production"
   },
   "author": {
     "name": "wubh2012"
